--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "jotai": "^2.2.2",
+    "js-cookie": "^3.0.5",
     "ky-universal": "^0.11.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.259.0",
@@ -53,6 +54,7 @@
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@tanstack/react-query-devtools": "^4.29.19",
     "@types/date-fns": "^2.6.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.197"
   }
 }
